# dump-research-info

./: .gitignore  CLAUDE.md  LICENSE.txt  README.md  pyproject.toml
.claude/commands/: gather_metadata.md
data/con_site/: README.md  XYZGrant.json  XYZOrganization.json  XYZPerson.json  XYZProject.json  XYZPublication.json  XYZPublicationVenue.json
src/dump_research_info/: __about__.py  __main__.py
src/dump_research_info/cli/: __init__.py
store/: .dumpthings.yaml
store/research_info_records/curated/: .dumpthings.yaml
tests/: __init__.py
